AUTOMAKE_OPTIONS = gnu

SUBDIRS = src

man_MANS = doc/medusa.1

EXTRA_DIST = doc/medusa.1 doc/*.html misc/libssh2/libssh2-0.17-banner-wait.diff misc/rdesktop/rdp-brute-force.diff misc/rdesktop/rdesktop-1.5.0-brute-force.patch misc/net-analyzer/medusa-2.0.ebuild misc/net-fs/ncpfs/ncpfs-2.2.6.ebuild.diff misc/net-fs/ncpfs/ncpfs-2.2.6.ebuild misc/zsh/_medusa
